# diwordle

./: CHANGELOG.md  LICENSE  README.md  diwordle.cabal  hie.yaml  intentos.json
app/: Main.hs
src/: CLI.hs  Core.hs  Game.hs  Lib.hs  Parser.hs
test/: Spec.hs
