cabal-version:        3.0
name:                 diwordle
version:              0.1.0.0
synopsis:             Un juego tipo Wordle en Haskell
description:          Una implementación del popular juego Wordle usando Haskell y Cabal.
license:              MIT
license-file:         LICENSE
author:               Olivier Saint-Nom
maintainer:           oltie4002@gmail.com
category:             Juegos
build-type:           Simple

common warnings
  ghc-options: -Wall

library
  import:               warnings
  exposed-modules:      
                        Core,
                        Game,
                        CLI
  hs-source-dirs:       src
  build-depends:    
                        base ^>=4.17.2.1,
                        aeson ^>= 2.2.3,
                        tinyapp ^>=0.2.1.0,
                        containers,
                        unordered-containers
  default-language:     Haskell2010

executable diwordle
  import:               warnings
  main-is:              Main.hs
  hs-source-dirs:       app
  build-depends:        base ^>=4.17.2.1,
                        diwordle,
                        brick >=0.66.1,
                        vty >=5.34.0
  ghc-options:          -threaded
  default-language:     Haskell2010

test-suite diwordle-test
  import:               warnings
  type:                 exitcode-stdio-1.0
  main-is:              Spec.hs
  hs-source-dirs:       test
  build-depends:        base ^>=4.17.2.1,
                        diwordle
  default-language:     Haskell2010
