cabal-version:        3.0
name:                 diwordle
version:              0.1.0.0
synopsis:             Un juego tipo Wordle en Haskell
description:          Una implementación del popular juego Wordle usando Haskell y Cabal.
license:              MIT
license-file:         LICENSE
author:               Olivier Saint-Nom
maintainer:           oltie4002@gmail.com
category:             Juegos
build-type:           Simple

library
  exposed-modules:      
                        Core,
                        Game,
                        CLI
  hs-source-dirs:       src
  build-depends:    
                        base >=4.17.2.1,
                        aeson >=2.2.3 && <2.3,
                        tinyapp >=0.2.1.0 && <0.3,
                        containers >=0.6 && <0.7,
                        unordered-containers >=0.2 && <0.3,
                        random
  ghc-options:          -Wall
  default-language:     Haskell2010

executable diwordle-exe
  main-is:              Main.hs
  hs-source-dirs:       app
  build-depends:        
                        base >=4.17.2.1 && <4.18,
                        diwordle,
                        tinyapp >=0.2.1.0 && <0.3
  ghc-options:          -threaded -Wall
  default-language:     Haskell2010

test-suite diwordle-test
  type:                 exitcode-stdio-1.0
  main-is:              Spec.hs
  hs-source-dirs:       test
  build-depends:        
                        base >=4.17.2.1,
                        diwordle,
                        tasty >=1.4 && <1.5,   
                        tasty-hspec >=1.2 && <1.3
  ghc-options:          -Wall
  default-language:     Haskell2010
